@@ -1,17 +1,17 @@
-57822d4e6018ed9c3612d65029a410d0 *DESCRIPTION
+b98eb730227918f8b0c2fd74926998f8 *DESCRIPTION
 04fb0b89d8e5bfdf5a6a3c8742fbb497 *NAMESPACE
 646c24f533ad74b80c175366fcb49808 *R/cfunction.R
 3661ee24e0f177e278d23dc97797e056 *R/cmethods.R
 aac2d2db93459cdd03d169d8ef50f622 *R/cxxfunction.R
 7e32cd42ac56d4e281a1fe82b38738a7 *R/getDynLib.R
 b060d5e5093bf71dd36ba4ca26001cac *R/package.skeleton.R
-0c07ecc05d91dd41ea0e0663b0ef90c5 *R/utilities.R
+81e1d890da5b85685583318e51823418 *R/utilities.R
 a2ee040ec35c5f7c11ea23c5ed56b1a8 *README.md
-71acf885d00324937137bd5330e6bed4 *build/partial.rdb
-795cc1b14064f8abd0546622c8753ce8 *inst/NEWS.Rd
+31cdcef5a4f8a36edc4ab50e320f56cd *build/partial.rdb
+c3b751d820d861dc69db5bf432d8400a *inst/NEWS.Rd
 fde8bc34d810722d1394392c5e345488 *inst/tinytest/test_cfunction.R
 39c248bfe8f8db1ceacb5291ac6c6db3 *inst/tinytest/test_cxxfunction.R
-ccb7e04a6d7a0c9f511a4a1891aecc85 *inst/tinytest/test_utilities.R
+4763d2f59e9de3595195d0c308677d22 *inst/tinytest/test_utilities.R
 f763aeb09afa824ff93e53c61b522424 *man/cfunction.Rd
 ff7a3754cb0b9ebf56b01bf7b15720e1 *man/cxxfunction.Rd
 18b89221354bc68a777c5ea418e6efbe *man/getDynLib.Rd
