@@ -29,10 +29,6 @@ moveDLL(quadfn, name = "testname", directory = tempdir())
 expect_identical(quadfn(5, 1:5), res_known)
 
 expect_error(
-  moveDLL(quadfn, name = "testname", directory = tempdir()),
-  "DLL .* in use")
-
-expect_error(
   moveDLL(quadfn, name = "testname", directory = tempdir(), unload = TRUE),
   "Failed to copy")
 
@@ -68,6 +64,8 @@ moveDLL(quadfn, name = "testname", directory = tempdir(), unload = TRUE,
   overwrite = TRUE)
 writeCFunc(quadfn, quadfn_path)
 quadfn_reloaded <- readCFunc(quadfn_path)
+expect_identical(quadfn_reloaded(5, 1:5), res_known)
+
 
 # Create a function with a user defined function name in the source code,
 # save and restore
