@@ -3,6 +3,13 @@
 \newcommand{\ghpr}{\href{https://github.com/eddelbuettel/inline/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/eddelbuettel/inline/issues/#1}{##1}}
 
+\section{Changes in inline version 0.3.18 (2021-05-17)}{
+  \itemize{
+    \item The \code{moveDLL} code and tests were updated for changed in
+    R-devel (Johannes in \ghpr{22} fixing \ghit{21})
+  }
+}
+
 \section{Changes in inline version 0.3.17 (2020-11-30)}{
   \itemize{
     \item Unit testing is now supported via \pkg{tinytest} (Johannes in
